# soma

./: .dockerignore  .gitignore  404.html  API_STABILITY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.bench  INTRO.md  LICENSE  QODER_TEST_HANDBOOK.md  README.md  README_zh.md  ROADMAP.md  SOMA-全面能力介绍.html  SOMA_v1.1.1_Introduction_EN.html  SOMA_v1.1.1_介绍_CN.html  TEST_REPORT_v0.7.0.md  TEST_REPORT_v0.7.0_FINAL.md  UPGRADE.md  UPGRADE_v0.3.1b1.md  UPGRADE_v0.3.3b1.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  sitemap.xml  wisdom_laws.yaml
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/: SECURITY.md  pull_request_template.md
BETA_PLAN/: index.html
SOMA-Capability-Overview-EN/: index.html
SOMA-全面能力介绍/: index.html
SOMA-版本演进总结/: index.html
SOMA_v1.1.3_测试说明/: index.html
api/: index.html
api_stability/: index.html
architecture/: index.html
architecture_zh/: index.html
benchmark_data/: README.md  retrieval_1k.json
case-studies/: index.html
changelog/: index.html
contributing/: index.html
contribution-audit-standards/: index.html
dash/: app.py  llm_config.example.json  llm_config.json  providers.py  server.py
docs/: BETA_PLAN.md  SOMA-Capability-Overview-EN.html  SOMA-Capability-Overview-EN.md  SOMA-全面能力介绍.md  SOMA-版本演进总结.html  SOMA-版本演进总结.md  SOMA_v1.1.2_Introduction_EN.html  SOMA_v1.1.2_介绍_CN.html  SOMA_v1.1.3_测试说明.md  api_stability.md  architecture.md  architecture_zh.md  case-studies.md  changelog.md  contributing.md  contribution-audit-standards.md  faq.md  index.md  philosophy.md  philosophy_zh.md  plan-v0.8.0.md  quickstart.md  quickstart_zh.md  sitemap.xml  v0.10.0-零熵整合方案.md  v0.9.0-capabilities-en.md  v0.9.0-capabilities.md  v0.9.0-用户指南-en.md  v0.9.0-用户指南.md  v0.9.1-零熵整合方案.md  v0.9.2-多Agent编排技术说明.md  v0.x-v1.0.0-里程碑升级说明.md  zhongdao_report.md
examples/: CLAUDE_soma_memory.md  basic_usage.py  dev_memory.py  integration_guide.py  langchain_demo.py  shell_setup.sh  vscode-tasks-soma.json
faq/: index.html
philosophy/: index.html
philosophy_zh/: index.html
plan-v0.8.0/: index.html
quickstart/: index.html
quickstart_zh/: index.html
reports/: BENCH_v0.6.1_2026-05-06.json  BENCH_v0.6.1_2026-05-06.md  LIVE_BENCH_2026-05-06.json  LIVE_BENCH_2026-05-06.md  TEST_REPORT_v0.6.1.md
scripts/: QODER_README.md  ablation_test.py  awesome_list_submission.md  batch_test.py  batch_test_results.json  benchmark_test.py  cn_data.json  export_zhishu_data.md  gen_cn.py  gen_pdf.py  gen_pdf_cn.py  generate_demo_gif.py  generate_intro_pdf.py  generate_og_image.py  generate_report_pdfs.py  generate_retrieval_dataset.py  generate_summary_pdf.py  import_ablation.py  import_benchmark.py  import_mock_vs_real.py  install_v1.1.3.bat  install_v1.1.3.sh  live_benchmark.py  local_v070_validation.py  md_to_html.py  md_to_pdf.py  migrate_to_soma.py  mock_vs_real.py  render_pdf.py  seed_benchmark_data.py  server_diagnostic.py  submit_awesome_prs.py  v070_one_click_export.sh  v070_release_evidence_plan.md  verify_before_commit.py  verify_install.py  verify_v050.py  version_guard.py
search/: search_index.json
soma/: __init__.py  __main__.py  abc.py  agent.py  analogy.py  analytics.py  audit.py  autogen_tool.py  base.py  benchmarks.py  competitors.py  config.py  crewai_tool.py  embedder.py  engine.py  evolve.py  hub.py  langchain_tool.py  law_discovery.py  llamaindex_tool.py  mcp_server.py  plugin.py  quality.py  rbac.py  retry.py  test_dataset.json  vector_store.py  wisdom_laws.yaml  zhongdao.py
tests/: test_abc.py  test_agent.py  test_analogy.py  test_audit_fixes.py  test_backward_compat.py  test_base.py  (+38 more)
(+98 files in other folders)
